--- a/qzarcms/app/assets/stylesheets/application.css
+++ b/qzarcms/app/assets/stylesheets/application.css
@@ -11,3 +11,15 @@
  *= require_self
  *= require_tree .
  */
+
+
+/* The Navigation Dropdown Menu */ 
+.clearfix li {
+    display: inline-table;
+    position: relative;
+    padding: 0 20px;
+}
+
+.clearfix li li {
+    display: block;
+}
