--- a/qzarcms/qzarcms/app/assets/stylesheets/application.css
+++ b/qzarcms/qzarcms/app/assets/stylesheets/application.css
@@ -29,20 +29,71 @@ body {
   padding: 20px;
 }
 
-#menu ul {
-  list-style: none;
-  padding: 0px;
-  li {
-    float: left;
-    margin-right: 10px;
-    a {
-      display: block;
-      padding: 5px 10px;
-      text-decoration: none;
-    }
-    &.selected a, a:hover {
-      background: #CCC;
-    }
-  }
+
+
+
+/* The Navigation Dropdown Menu */ 
+
+.clearfix ul ul {
+  display: none;
 }
 
+  .clearfix ul li:hover > ul {
+    display:block;
+  }
+
+.clearfix ul {
+  background: #efefef; 
+  background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+  background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
+  background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
+  box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+  padding: 0 20px;
+  border-radius: 10px;  
+  list-style: none;
+  position: relative;
+  display: inline-table;
+}
+  .clearfix ul:after {
+    content: ""; clear: both; display: block;
+  }
+
+.clearfix ul li {
+  float: left;
+}
+  .clearfix ul li:hover {
+    background: #4b545f;
+    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
+  }
+    .clearfix ul li:hover a {
+      color: #fff;
+    }
+  
+  .clearfix ul li a {
+    display: block; padding: 25px 40px;
+    color: #757575; text-decoration: none;
+  }
+
+  .clearfix ul ul {
+  background: #5f6975; border-radius: 0px; padding: 0;
+  position: absolute; top: 100%;
+}
+  .clearfix ul ul li {
+    float: none; 
+    border-top: 1px solid #6b727c;
+    border-bottom: 1px solid #575f6a;
+    position: relative;
+  }
+    .clearfix ul ul li a {
+      padding: 15px 40px;
+      color: #fff;
+    } 
+      .clearfix ul ul li a:hover {
+        background: #4b545f;
+      }
+
+  .clearfix ul ul ul {
+  position: absolute; left: 100%; top:0;
+}
